condicionais for arrays objetos e exeplos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Básico de JS</title>
+
+    <style>
+        .dark {
+            background-color: #171717;
+            color: white;
+            padding: 20px;
+        }
+
+        .light {
+            background-color: #e0e0e0;
+            color: black;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
 
     <div id="message"></div>
+
+    <p>
+        A idade do usuário é: <span id="span-idade"></span>
+    </p>
+
+    <p class="verifica-idade"></p>
     
     <script>
         console.log("Hello World!");
@@ -16,7 +36,12 @@
     <!-- <script src="js/02-domBasico.js"></script> -->
     <!-- <script src="js/03-operadores.js"></script> -->
     <!-- <script src="js/04-operadoreRelacionais.js"></script> -->
-    <script src="js/05-operadoresLogicos.js"></script>
+    <!-- <script src="js/05-operadoresLogicos.js"></script> -->
+    <!-- <script src="js/06-condicionais.js"></script> -->
+    <!-- <script src="js/07-while.js"></script> -->
+    <!-- <script src="js/08-for.js"></script> -->
+    <!-- <script src="js/09-arrays.js"></script> -->
+    <script src="js/10-objetos.js"></script>
 
 </body>
 </html>
